RESOLVED FIXED200791
[iOS WK2] Scroll indicators disappear sometimes
https://bugs.webkit.org/show_bug.cgi?id=200791
Summary [iOS WK2] Scroll indicators disappear sometimes
Simon Fraser (smfr)
Reported 2019-08-15 15:17:12 PDT
[iOS WK2] Scroll indicators disappear sometimes
Attachments
Patch (21.82 KB, patch)
2019-08-15 15:19 PDT, Simon Fraser (smfr)
thorton: review+
Patch (21.95 KB, patch)
2019-08-16 20:49 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2019-08-15 15:19:36 PDT
Radar WebKit Bug Importer
Comment 2 2019-08-15 15:20:18 PDT
EWS Watchlist
Comment 3 2019-08-15 15:21:49 PDT
Attachment 376430 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/ios/OverflowScrollViewTests.mm:31: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 4 2019-08-16 14:20:37 PDT
Comment on attachment 376430 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=376430&action=review > Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteLayerTreeViews.h:41 > +@protocol WKWebKitControlled <NSObject> Not sure about the name, but the concept seems sound. Clearly you should call it <WKView> 😉
Simon Fraser (smfr)
Comment 5 2019-08-16 20:49:15 PDT
EWS Watchlist
Comment 6 2019-08-16 20:51:49 PDT
Attachment 376588 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/ios/OverflowScrollViewTests.mm:31: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Tools/TestWebKitAPI/Tests/ios/OverflowScrollViewTests.mm:37: Misplaced OS version check. Please use a named macro in wtf/Platform.h, wtf/FeatureDefines.h, or an appropriate internal file. [build/version_check] [5] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 7 2019-08-17 08:27:45 PDT
Comment on attachment 376588 [details] Patch Clearing flags on attachment: 376588 Committed r248820: <https://trac.webkit.org/changeset/248820>
Note You need to log in before you can comment on or make changes to this bug.