[iOS WK2] Scroll indicators disappear sometimes https://bugs.webkit.org/show_bug.cgi?id=200791

Reviewed by Tim Horton.
Source/WebKit:

_web_setSubviews: replaces all of the views subviews with the supplied array, but this blows
away views not managed by WebKit, including UIScrollViews scroll indicators. Fix by having
WebKit-managed views implement the WKWebKitControlled protocol, and only removing views
implementing that protocol.

* Shared/RemoteLayerTree/RemoteLayerTreePropertyApplier.mm:
(-[UIView _web_setSubviews:]):
* UIProcess/RemoteLayerTree/ios/RemoteLayerTreeViews.h:

Tools:

Tests that test that scroll indicators survive subview replacement, and that
a custom view also survives subview replacement.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/ios/OverflowScrollViewTests.mm: Added.
(TestWebKitAPI::TEST):
* TestWebKitAPI/cocoa/TestWKWebView.h:
* TestWebKitAPI/cocoa/TestWKWebView.mm:
(-[TestWKWebView performAfterLoading:]):
(-[UIView wkFirstSubviewWithClass:]):
(-[UIView wkFirstSubviewWithBoundsSize:]):
* TestWebKitAPI/ios/composited.html: Added.
* TestWebKitAPI/ios/overflow-scroll.html: Added.


Canonical link: https://commits.webkit.org/214594@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248820 268f45cc-cd09-0410-ab3c-d52691b4dbfc