Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteLayerTreeViews.h
@@ -38,7 +38,10 @@ class WebPageProxy;
 @protocol WKNativelyInteractible <NSObject>
 @end
 
-@interface WKCompositingView : UIView
+@protocol WKContentControlled <NSObject>
+@end
+
+@interface WKCompositingView : UIView <WKContentControlled>
 @end
 
 @interface WKTransformView : WKCompositingView
@@ -56,16 +59,16 @@ class WebPageProxy;
 
 @end
 
-@interface WKUIRemoteView : _UIRemoteView
+@interface WKUIRemoteView : _UIRemoteView <WKContentControlled>
 @end
 
-@interface WKBackdropView : _UIBackdropView
+@interface WKBackdropView : _UIBackdropView <WKContentControlled>
 @end
 
-@interface WKChildScrollView : UIScrollView
+@interface WKChildScrollView : UIScrollView <WKContentControlled>
 @end
 
-@interface WKEmbeddedView : UIView
+@interface WKEmbeddedView : UIView <WKContentControlled>
 
 - (instancetype)initWithEmbeddedViewID:(WebCore::GraphicsLayer::EmbeddedViewID)embeddedViewID;
 
